# ConsoleSnakeGame

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  TODO.md
inc/: Field.hpp  Food.hpp  Game.hpp  Renderer.hpp  Snake.hpp
src/: Field.cpp  Food.cpp  Game.cpp  Renderer.cpp  Snake.cpp  main.cpp
